--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<nav>
+		<ul><a href="#">Home</a></ul>
+		<ul><a href="#">About us</a></ul>
+		<ul><a href="#">Contact us</a></ul>
+	</nav>
+	<img src="https://picsum.photos/id/123/200/300" alt="image1"/>
+	<img src="https://picsum.photos/id/124/200/300" alt="image2"/>
+	<img src="https://picsum.photos/id/125/200/300" alt="image3"/>
     <script type="text/javascript" src="./script.js">
 </script>
 
