--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 
 	<nav>
-		<ul><a href="#">Home</a></ul>
-		<ul><a href="#">About us</a></ul>
-		<ul><a href="#">Contact us</a></ul>
+		<ul><li><a href="#">Home</a></li>
+			<li><a href="#">About us</a></li>
+			<li><a href="#">Contact us</a></li></ul>
 	</nav>
 	<img src="https://picsum.photos/id/123/200/300" alt="image1"/>
 	<img src="https://picsum.photos/id/124/200/300" alt="image2"/>
